--- a/debate.html
+++ b/debate.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Kidii • Debate</title>
-  <link href="assets/css/styles.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="page-debate">
