--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Kidii • Home</title>
   <link href="styles.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<style>
+  .hero-overlay, .hero__overlay { display: none !important; pointer-events: none !important; }
+  .hero-bg { pointer-events: none !important; }
+  .site-header { position: relative !important; z-index: 99; }
+  .page-content { z-index: 100; position: relative; }
+</style>
 </head>
 <body class="page-home">
   <header class="site-header" role="banner">
